test/resources/parser/failing/ExtCallError3.scala
object CallError {
  10() // Literal + call!
}
